--- a/styles.css
+++ b/styles.css
@@ -111,8 +111,7 @@ Fonts:
 /* Set up the main font and background color for the whole page */
 body {
   /* Set a black background and add the background image */
-  /* background-color: #000;  Black background removed */
-  background-image: url('https://cdn2.dropmarkusercontent.com/52043/7ae98bbb0d5a96ca35297379fee6e2dc240ed2dba200e517568b0b6985985974/preview/Madagascar_2019_CG-2726.jpg?Expires=1757257951&Signature=eGIwsaKVMYUacyG~8n1-qIabEY4e51neDoSX1lCnQxfyYae2J~JXhEUigbnrTa-fuzmQj9GD4wzGeXGBxsoUSg9V1YjQQryCrZUZ~7i0yZHcnILYdY7MDn3ph5olykWL9n0VthyinhCBgtPm5vY1ooktQt~7ubLKbaMOPsG9I96bPaDyQMKMtRJ4P5jGddKVjkoQwGjIWyZ3r0Sf7aDlkGlW4NYY1cIVtv4ogJ65SdCpZDxBe9UjPf1aTNWfC3tzQlsztKfipIexa0ZgkY8-libDX4-Ymw9z3IojXwfv9FTEbQedZLD~3Dzk1lARpKdoKs7Pdeh7ry6fW5b704bKGQ__&Key-Pair-Id=APKAITQYWVEN757ZA4KQ');
+  background-image: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1500&q=80'); /* Permanent Unsplash image */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center -60px;
